syntax = "proto3";

option go_package = "github.com/souravbiswassanto/path-pulse-iot-backend/protogen/golang/iot/group";

import "iot/user.proto";
import "iot/tracker.proto";

message GroupId {
  uint64 g_id = 1;
}
message Group {
  uint64 g_id = 1;
  string name = 2;
  repeated UserID members = 3;
}

message UserAdd {
  uint64 userId = 1;
  uint64 groupId = 2;
}

service GroupManager {
  rpc CreateGroup(Group) returns (Empty) {}
  rpc UpdateGroup(Group) returns (Empty) {}
  rpc DeleteGroup(GroupId) returns (Empty) {}
  rpc AddUserToGroup(UserAdd) returns (Empty) {}
}