syntax = "proto3";

option go_package = "github.com/souravbiswassanto/path-pulse-iot-backend/protogen/golang/iot/user";

import "google/api/datetime.proto";
import "google/api/annotations.proto";

enum Gender {
  male = 0;
  female = 1;
  other = 2;
}

message UserID {
  uint64 id = 1;
}

message Empty {}

message User {
  UserID id = 1;
  string name = 2;
  int32 age = 3;
  float weight = 4;
  float height = 5;
  float diabetic_level = 6;
  Gender gender = 7;
  string email = 8;
  string phone_no = 9;
  string address = 10;
  google.type.DateTime created_at = 11;
  google.type.DateTime updated_at = 12;
}

service UserManager {
  rpc GetUser(UserID) returns (User) {
    option (google.api.http) = {
      get: "/v1/user/{id}"
    };
  }
  rpc CreateUser(User) returns (Empty) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }
  rpc UpdateUser(User) returns (Empty) {
    option (google.api.http) = {
      put: "/v1/user/{id.id}"
      body: "*"
    };
  }
  rpc DeleteUser(UserID) returns (Empty) {
    option (google.api.http) = {
      delete: "/v1/user/{id}"
    };
  }
}